Sun Jun 28 11:51:48 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_rng.h: renamed gsl_rng_get_uni to gsl_rng_uniform

Wed Jun 24 12:10:23 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_rng.h: added inline versions of gsl_rng_get and
 	gsl_rng_get_uni

	* benchmark.c: added a simple benchmark program to measure rng's
 	per second

	* test.c (N2): reduced the number of tests from 1 million to 100k
 	to speed things up a bit

	* changed the generic seeding algorithm to s -> (69069*s) &
 	0xFFFFFFFF which covers all 32 bits.

Sun Jun 21 23:24:36 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added the MT19937 and TT880 mersenne prime generators

Sat Jun 20 13:58:40 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* ensured that 32 bit quantities are defined as 'long', as
 	required by ANSI. On a 16 bit platform 'int' is usually just 16
 	bits.
	
	* ranlux.c: added the RANLUX generator

Fri Jun 19 11:12:06 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* removed the gsl- prefix from generator name strings

Thu Jun 18 12:17:16 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c: added a 10000 iteration check for cmrg

	* got rid of init_state values. It's simpler to generate them
 	directly from the seed, the cost of creating an rng is not usually
 	a big deal.
	
	* rng.c: eliminated the gsl_rng_internal struct since it was not
 	really necessary

Wed Jun 17 17:31:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* minstd.c: added Park and Millers MINSTD generator

Thu Jun 11 18:08:40 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* this will be an alternate, thread-safe interface to the random
 	number generators.
