@@ -70,6 +70,7 @@ minstd_set (void *vstate, unsigned long int s)
 static const gsl_rng_type minstd_type =
 {"minstd",			/* name */
  2147483646,			/* RAND_MAX */
+ 0,          			/* RAND_MIN */
  sizeof (minstd_state_t),
  &minstd_set,
  &minstd_get};
