@@ -1,5 +1,10 @@
 Sun Jun 28 11:51:48 1998  Brian Gough  <bjg@vvv.lanl.gov>
 
+	* gsl_rng.h: added gsl_rng_uniform_pos which guarantees positive
+ 	numbers, (0,1]
+
+	* added a RAND_MIN entry to the gsl_rng/gsl_rng_type structs
+
 	* gsl_rng.h: renamed gsl_rng_get_uni to gsl_rng_uniform
 
 Wed Jun 24 12:10:23 1998  Brian Gough  <bjg@vvv.lanl.gov>
